--- a/web/src/app/admin/field-groups/field-groups.page.html
+++ b/web/src/app/admin/field-groups/field-groups.page.html
@@ -3,7 +3,7 @@
     <ion-row class="m-b-15">
       <ion-col>
         <ion-button (click)="createFieldGroup()">
-          Add new field group
+          Add new course group
         </ion-button>
       </ion-col>
     </ion-row>
@@ -12,7 +12,7 @@
         <b>Name</b>
       </ion-col>
       <ion-col size="3">
-        <b>Field Group Type</b>
+        <b>Course Group Type</b>
       </ion-col>
       <ion-col size="2">
         <b>Status</b>
