--- a/web/src/app/admin/schedules-overview/schedules-overview.page.html
+++ b/web/src/app/admin/schedules-overview/schedules-overview.page.html
@@ -3,19 +3,19 @@
       <table class="m-25 p-25 table table-striped table-hover" id="groupMatrix">
         <thead class="thead-dark">
             <tr>
-              <th></th>
-              <th class="text-center header">Jun 16<br />Jul 15</th>
-              <th class="text-center header">Jul 16<br />Aug 15</th>
-              <th class="text-center header">Aug 16<br />Sep 15</th>
-              <th class="text-center header">Sep 16<br />Oct 15</th>
-              <th class="text-center header">Oct 16<br />Nov 15</th>
-              <th class="text-center header">Nov 16<br />Dec 15</th>
-              <th class="text-center header">Dec 16<br />Jan  15</th>
-              <th class="text-center header">Jan  16<br />Feb 14</th>
-              <th class="text-center header">Feb 15<br />Mar 15</th>
-              <th class="text-center header">Mar 16<br />Apr 15</th>
-              <th class="text-center header">Apr 16<br />May 15</th>
-              <th class="text-center header">May 16<br />Jun 15</th>
+                <th></th>
+                <th class="text-center header">Jun 16 - <br />Jul 15</th>
+                <th class="text-center header">Jul 16 - <br />Aug 15</th>
+                <th class="text-center header">Aug 16 - <br />Sep 15</th>
+                <th class="text-center header">Sep 16 - <br />Oct 15</th>
+                <th class="text-center header">Oct 16 - <br />Nov 15</th>
+                <th class="text-center header">Nov 16 - <br />Dec 15</th>
+                <th class="text-center header">Dec 16 - <br />Jan 15</th>
+                <th class="text-center header">Jan 16 - <br />Feb 14</th>
+                <th class="text-center header">Feb 15 - <br />Mar 15</th>
+                <th class="text-center header">Mar 16 - <br />Apr 15</th>
+                <th class="text-center header">Apr 16 - <br />May 15</th>
+                <th class="text-center header">May 16 - <br />Jun 15</th>
           </tr>
         </thead>
         <tbody>
