--- a/web/src/app/admin/student-change-elective-request/update-student-change-elective-request/update-student-change-elective-request.page.html
+++ b/web/src/app/admin/student-change-elective-request/update-student-change-elective-request/update-student-change-elective-request.page.html
@@ -18,7 +18,7 @@
           <b>Email</b>
         </ion-col>
         <ion-col size="3">
-          <b>Student Number</b>
+          <b>Student ID</b>
         </ion-col>
         <ion-col size="3">
           <b>Group</b>
