--- a/web/src/app/field-admin/grades-management/view-assignment/view-assignment.page.html
+++ b/web/src/app/field-admin/grades-management/view-assignment/view-assignment.page.html
@@ -33,7 +33,7 @@
     <ion-row>
       <ion-col size="4">
         <ion-label>
-          <b>Field Name</b>
+          <b>Course</b>
         </ion-label>
       </ion-col>
       <ion-col size="8">
@@ -91,7 +91,7 @@
     <ion-row>
       <ion-col size="4">
         <ion-label>
-          <b>Remarks</b>
+          <b>Admin Remarks</b>
         </ion-label>
       </ion-col>
       <ion-col size="8">
