--- a/web/src/app/student/change-schedule-requests/change-schedule-requests-create/change-schedule-requests-create.page.html
+++ b/web/src/app/student/change-schedule-requests/change-schedule-requests-create/change-schedule-requests-create.page.html
@@ -4,7 +4,7 @@
       <ion-list>
         <ion-row>
           <ion-col>
-            <h3>Add new change schedule request</h3>
+            <h3>Add new record</h3>
           </ion-col>
           <ion-col text-right>
             <ion-button fill="clear" color="dark" (click)="dismiss()">
