--- a/web/src/app/student/change-schedule-requests/change-schedule-requests-view/change-schedule-requests-view.page.html
+++ b/web/src/app/student/change-schedule-requests/change-schedule-requests-view/change-schedule-requests-view.page.html
@@ -12,7 +12,7 @@
     </ion-row>
     <ion-row class="border-bottom">
       <ion-col size="3">
-        <b>Field</b>
+        <b>Course</b>
       </ion-col>
       <ion-col size="3">
         <b>Start Date</b>
@@ -91,7 +91,7 @@
     <ion-row class="p-t-15">
       <ion-col size="2">
         <ion-label>
-          <b>Remarks:</b>
+          <b>Admin Remarks:</b>
         </ion-label>
       </ion-col>
       <ion-col size="10">
