--- a/web/src/app/student/student-rotations/student-rotations.page.html
+++ b/web/src/app/student/student-rotations/student-rotations.page.html
@@ -2,7 +2,7 @@
   <ion-grid fixed class="p-25">
     <ion-row class="border-bottom">
       <ion-col size="2">
-        <b>Field</b>
+        <b>Course</b>
       </ion-col>
       <ion-col size="2">
         <b>Start Date</b>
