--- a/web/src/app/admin/accounts/accounts-create/accounts-create.page.html
+++ b/web/src/app/admin/accounts/accounts-create/accounts-create.page.html
@@ -4,7 +4,7 @@
       <ion-list>
         <ion-row>
           <ion-col>
-            <h3>Add new account</h3>
+            <h3>Add new record</h3>
           </ion-col>
           <ion-col text-right>
             <ion-button fill="clear" color="dark" (click)="dismiss()">
@@ -24,7 +24,7 @@
                 formControlName="userType"
                 (ionChange)="resolveAccountType()">
                 <ion-select-option [value]="USER_TYPE_VALUES[u]" *ngFor="let u of USER_TYPE_KEYS">
-                  {{ USER_TYPE_VALUES[u] }}
+                  {{ USER_TYPE_VALUES[u] === USER_TYPE_VALUES.FIELD_ADMIN ? 'RCA' : USER_TYPE_VALUES[u] }}
                 </ion-select-option>
               </ion-select>
             </ion-item>
@@ -34,7 +34,7 @@
           <ion-col>
             <ion-item>
               <ion-label position="floating">Student ID</ion-label>
-              <ion-input formControlName="studentId" type="number"></ion-input>
+              <ion-input formControlName="studentId"></ion-input>
             </ion-item>
           </ion-col>
         </ion-row>
