--- a/web/src/app/admin/accounts/accounts-view-assignment/accounts-view-assignment.page.html
+++ b/web/src/app/admin/accounts/accounts-view-assignment/accounts-view-assignment.page.html
@@ -13,7 +13,7 @@
     <ion-row>
       <ion-col size="4">
         <ion-label>
-          <b>Field Name</b>
+          <b>Course</b>
         </ion-label>
       </ion-col>
       <ion-col size="8">
@@ -71,7 +71,7 @@
     <ion-row>
       <ion-col size="4">
         <ion-label>
-          <b>Remarks</b>
+          <b>Admin Remarks</b>
         </ion-label>
       </ion-col>
       <ion-col size="8">
