--- a/web/src/app/admin/accounts/accounts-view/accounts-view.page.html
+++ b/web/src/app/admin/accounts/accounts-view/accounts-view.page.html
@@ -94,17 +94,6 @@
         <ion-label>{{ user.group ? user.group.name : 'Unassigned' }}</ion-label>
       </ion-col>
     </ion-row>
-    <!-- <ion-row *ngIf="user.userType === UserType.FIELD_ADMIN">
-      <ion-col size="4">
-        <ion-label>
-          <b>Field</b>
-        </ion-label>
-      </ion-col>
-      <ion-col size="8">
-        <ion-label>{{ user.field ? user.field.name : ' -- ' }}</ion-label>
-      </ion-col>
-    </ion-row> -->
-    <!-- TODO: Hide elements for students if current user is not a student -->
     <ng-container>
       <ion-row class="p-t-10">
         <ion-col>
@@ -134,6 +123,16 @@
           <ion-label>{{ user.contactPersonNumber ? user.contactPersonNumber : ' -- ' }}</ion-label>
         </ion-col>
       </ion-row>
+      <ion-row>
+        <ion-col size="4">
+          <ion-label>
+            <b>Relationship</b>
+          </ion-label>
+        </ion-col>
+        <ion-col size="8">
+          <ion-label>{{ user.contactPersonRelationship ? user.contactPersonRelationship : ' -- ' }}</ion-label>
+        </ion-col>
+      </ion-row>
     </ng-container>
     <ion-row>
       <ion-col text-right>
@@ -156,7 +155,7 @@
   <ion-grid fixed padding *ngIf="currentTab === 'ROTATIONS'">
     <ion-row class="border-bottom">
       <ion-col size="2">
-        <b>Field</b>
+        <b>Course</b>
       </ion-col>
       <ion-col size="2">
         <b>Start Date</b>
