--- a/web/src/app/admin/admin.page.html
+++ b/web/src/app/admin/admin.page.html
@@ -5,6 +5,9 @@
     </ion-buttons>
     <ion-title>UST Med Clerkship Tracker</ion-title>
     <ion-buttons slot="end">
+      <ion-label class="p-l-r-5 profile-text">
+        {{ currentUser.firstName + ' ' + currentUser.middleName + ' ' + currentUser.lastName }}
+      </ion-label>
       <ion-button title="Profile" (click)="viewProfile()">
         <ion-icon name="contact"></ion-icon>
       </ion-button>
@@ -25,10 +28,10 @@
               <ion-label>Accounts</ion-label>
             </ion-item>      
             <ion-item a [routerLink]="['/admin/fields']">
-              <ion-label>Fields</ion-label>
+              <ion-label>Courses</ion-label>
             </ion-item>
             <ion-item a [routerLink]="['/admin/field-groups']">
-              <ion-label>Field Groups</ion-label>
+              <ion-label>Course Groups</ion-label>
             </ion-item>
             <ion-item a [routerLink]="['/admin/schedules']">
               <ion-label>Schedules</ion-label>
