--- a/web/src/app/admin/admin.page.scss
+++ b/web/src/app/admin/admin.page.scss
@@ -4,6 +4,11 @@
     margin-left: 10px;
 }
 
+.profile-text {
+	color: #424242;
+	font-weight: 600;
+}
+
 ion-menu-toggle > ion-item {
 	margin-top: 10px !important;
 	margin-bottom: 10px !important;
