--- a/web/src/app/admin/field-groups/field-groups-update/field-groups-update.page.html
+++ b/web/src/app/admin/field-groups/field-groups-update/field-groups-update.page.html
@@ -4,7 +4,7 @@
       <ion-list>
         <ion-row>
           <ion-col>
-            <h3>Edit field group</h3>
+            <h3>Edit course group</h3>
           </ion-col>
           <ion-col text-right>
             <ion-button fill="clear" color="dark" (click)="dismiss()">
@@ -15,10 +15,10 @@
         <ion-row>
           <ion-col>
             <ion-item>
-              <ion-label position="floating">Field Group Type</ion-label>
+              <ion-label position="floating">Course Group Type</ion-label>
               <ion-select 
                 interface="popover" 
-                placeholder="Select Field Group Type"
+                placeholder="Select Course Group Type"
                 [value]="fieldGroupType"
                 [(ngModel)]="fieldGroupType"
                 formControlName="fieldGroupType"
@@ -33,10 +33,10 @@
         <ion-row *ngIf="fieldsToDisplay.length > 0">
           <ion-col>
             <ion-item>
-              <ion-label position="floating">Fields</ion-label>
+              <ion-label position="floating">Courses</ion-label>
               <ion-select 
                 interface="alert" 
-                placeholder="Select Fields"
+                placeholder="Select Courses"
                 formControlName="fields"
                 multiple
                 [value]="selectedFields">
@@ -49,7 +49,7 @@
         </ion-row>
         <ion-row *ngIf="fieldsToDisplay.length === 0">
           <ion-col>
-            <ion-label class="error">Please create a field for this type</ion-label>
+            <ion-label class="error">Please create a course for this type</ion-label>
           </ion-col>
         </ion-row>
         <ion-row>
