--- a/web/src/app/admin/field-groups/field-groups-view/field-groups-view.page.html
+++ b/web/src/app/admin/field-groups/field-groups-view/field-groups-view.page.html
@@ -2,7 +2,7 @@
   <ion-grid padding fixed>
     <ion-row>
       <ion-col>
-        <h3>Field Group Information</h3>
+        <h3>Course Group Information</h3>
       </ion-col>
       <ion-col text-right>
         <ion-button fill="clear" color="dark" (click)="dismiss()">
@@ -13,7 +13,7 @@
     <ion-row>
       <ion-col size="3">
         <ion-label>
-          <b>Fields</b>
+          <b>Courses</b>
         </ion-label>
       </ion-col>
       <ion-col size="9">
@@ -23,7 +23,7 @@
     <ion-row>
       <ion-col size="3">
         <ion-label>
-          <b>Field Group Type</b>
+          <b>Course Group Type</b>
         </ion-label>
       </ion-col>
       <ion-col size="9">
