--- a/web/src/app/admin/fields/fields-view/fields-view.page.html
+++ b/web/src/app/admin/fields/fields-view/fields-view.page.html
@@ -2,7 +2,7 @@
   <ion-grid padding fixed>
     <ion-row>
       <ion-col>
-        <h3>Field Information</h3>
+        <h3>Course Information</h3>
       </ion-col>
       <ion-col text-right>
         <ion-button fill="clear" color="dark" (click)="dismiss()">
@@ -13,7 +13,7 @@
     <ion-row>
       <ion-col size="4">
         <ion-label>
-          <b>Field Name</b>
+          <b>Course</b>
         </ion-label>
       </ion-col>
       <ion-col size="8">
@@ -23,7 +23,7 @@
     <ion-row>
       <ion-col size="4">
         <ion-label>
-          <b>Field Type</b>
+          <b>Course Type</b>
         </ion-label>
       </ion-col>
       <ion-col size="8">
@@ -33,7 +33,7 @@
     <ion-row>
       <ion-col size="4">
         <ion-label>
-          <b>Field Admin</b>
+          <b>RCA</b>
         </ion-label>
       </ion-col>
       <ion-col size="8">
