--- a/web/src/app/admin/fields/fields.page.html
+++ b/web/src/app/admin/fields/fields.page.html
@@ -3,19 +3,19 @@
     <ion-row class="m-b-15">
       <ion-col>
         <ion-button (click)="createField()">
-          Add new field
+          Add new course
         </ion-button>
       </ion-col>
     </ion-row>
     <ion-row class="border-bottom">
       <ion-col size="3">
-        <b>Field</b>
+        <b>Course</b>
       </ion-col>
       <ion-col size="2">
-        <b>Field Type</b>
+        <b>Course Type</b>
       </ion-col>
       <ion-col size="3">
-        <b>Field Admin</b>
+        <b>RCA</b>
       </ion-col>
       <ion-col size="2">
         <b>Address</b>
