--- a/web/src/app/admin/rotations/rotations-create/rotations-create.page.html
+++ b/web/src/app/admin/rotations/rotations-create/rotations-create.page.html
@@ -4,7 +4,7 @@
       <ion-list>
         <ion-row>
           <ion-col>
-            <h3>Add new rotation</h3>
+            <h3>Add new record</h3>
           </ion-col>
           <ion-col text-right>
             <ion-button fill="clear" color="dark" (click)="dismiss()">
@@ -50,10 +50,10 @@
           [ngClass]="{'input-hidden': rotationType !== ROTATION_TYPE_VALUES.Single}">
           <ion-col>
             <ion-item>
-              <ion-label position="floating">Field</ion-label>
+              <ion-label position="floating">Course</ion-label>
               <ion-select 
                 interface="action-sheet" 
-                placeholder="Select Field"
+                placeholder="Select Course"
                 formControlName="field">
                 <ion-select-option [value]="field._id" *ngFor="let field of fields">
                   {{ field.name }}
@@ -72,10 +72,10 @@
           [ngClass]="{'input-hidden': rotationType === ROTATION_TYPE_VALUES.Single}">
           <ion-col>
             <ion-item>
-              <ion-label position="floating">Field Group</ion-label>
+              <ion-label position="floating">Course Group</ion-label>
               <ion-select 
                 interface="action-sheet" 
-                placeholder="Select Field Group"
+                placeholder="Select Course Group"
                 formControlName="fieldGroup">
                 <ion-select-option [value]="fg._id" *ngFor="let fg of fieldGroupsDisplay">
                   {{ fg.name }}
