--- a/web/src/app/admin/rotations/rotations.page.html
+++ b/web/src/app/admin/rotations/rotations.page.html
@@ -9,13 +9,13 @@
     </ion-row>
     <ion-row class="border-bottom">
       <ion-col size="2">
-        <b>Field</b>
+        <b>Course</b>
       </ion-col>
       <ion-col size="3">
         <b>Schedule</b>
       </ion-col>
       <ion-col size="2">
-        <b>Field Admin</b>
+        <b>RCA</b>
       </ion-col>
       <ion-col size="2">
         <b>Group</b>
