--- a/web/src/app/admin/student-change-schedule-requests/student-change-schedule-request-update/student-change-schedule-request-update.page.html
+++ b/web/src/app/admin/student-change-schedule-requests/student-change-schedule-request-update/student-change-schedule-request-update.page.html
@@ -12,7 +12,7 @@
     </ion-row>
     <ion-row class="border-bottom">
       <ion-col size="3">
-        <b>Field</b>
+        <b>Course</b>
       </ion-col>
       <ion-col size="3">
         <b>Start Date</b>
