--- a/web/src/app/admin/student-change-schedule-requests/student-change-schedule-requests.page.html
+++ b/web/src/app/admin/student-change-schedule-requests/student-change-schedule-requests.page.html
@@ -8,7 +8,7 @@
         <b>Email</b>
       </ion-col>
       <ion-col size="2">
-        <b>Student Number</b>
+        <b>Student ID</b>
       </ion-col>
       <ion-col size="2">
         <b>Group</b>
