--- a/web/src/app/field-admin/field-admin-profile/field-admin-profile.page.html
+++ b/web/src/app/field-admin/field-admin-profile/field-admin-profile.page.html
@@ -48,7 +48,7 @@
           <ion-col>
             <ion-item>
               <ion-label position="floating">Mobile Number</ion-label>
-              <ion-input formControlName="mobileNumber" type="number"></ion-input>
+              <ion-input formControlName="mobileNumber"></ion-input>
             </ion-item>
           </ion-col>
         </ion-row>
@@ -69,7 +69,15 @@
           <ion-col>
             <ion-item>
               <ion-label position="floating">Contact Number</ion-label>
-              <ion-input formControlName="contactPersonNumber" type="number"></ion-input>
+              <ion-input formControlName="contactPersonNumber"></ion-input>
+            </ion-item>
+          </ion-col>
+        </ion-row>
+        <ion-row>
+          <ion-col>
+            <ion-item>
+              <ion-label position="floating">Relationship</ion-label>
+              <ion-input formControlName="contactPersonRelationship"></ion-input>
             </ion-item>
           </ion-col>
         </ion-row>
