--- a/web/src/app/field-admin/grades-management/update-grade/update-grade.page.html
+++ b/web/src/app/field-admin/grades-management/update-grade/update-grade.page.html
@@ -24,7 +24,7 @@
         <ion-row>
           <ion-col>
             <ion-item>
-              <ion-label position="floating">Remarks</ion-label>
+              <ion-label position="floating">Admin Remarks</ion-label>
               <ion-textarea formControlName="remarks"></ion-textarea>
             </ion-item>
           </ion-col>
