--- a/web/src/app/student/change-elective-requests/change-elective-requests.page.html
+++ b/web/src/app/student/change-elective-requests/change-elective-requests.page.html
@@ -9,13 +9,13 @@
     </ion-row>
     <ion-row class="border-bottom">
       <ion-col size="2">
-        <b>Field</b>
+        <b>Course</b>
       </ion-col>
       <ion-col size="4">
         <b>Message</b>
       </ion-col>
       <ion-col size="4">
-        <b>Remarks</b>
+        <b>Admin Remarks</b>
       </ion-col>
       <ion-col size="2">
         <b>Status</b>
