--- a/web/src/app/student/change-schedule-requests/change-schedule-requests.page.html
+++ b/web/src/app/student/change-schedule-requests/change-schedule-requests.page.html
@@ -9,7 +9,7 @@
     </ion-row>
     <ion-row class="border-bottom">
       <ion-col size="3">
-        <b>Field</b>
+        <b>Course</b>
       </ion-col>
       <ion-col size="5">
         <b>Schedule</b>
