--- a/web/src/app/student/change-schedule-requests/schedule-changes/schedule-changes.page.html
+++ b/web/src/app/student/change-schedule-requests/schedule-changes/schedule-changes.page.html
@@ -12,7 +12,7 @@
     </ion-row>
     <ion-row class="border-bottom">
       <ion-col size="3">
-        <b>Field</b>
+        <b>Course</b>
       </ion-col>
       <ion-col size="3">
         <b>Start Date</b>
