--- a/web/src/app/student/student-profile/student-profile.page.html
+++ b/web/src/app/student/student-profile/student-profile.page.html
@@ -15,7 +15,7 @@
         <ion-row>
           <ion-col>
             <ion-item>
-              <ion-label position="floating">Student Number</ion-label>
+              <ion-label position="floating">Student ID</ion-label>
               <ion-input formControlName="studentId"></ion-input>
             </ion-item>
           </ion-col>
@@ -56,7 +56,7 @@
           <ion-col>
             <ion-item>
               <ion-label position="floating">Mobile Number</ion-label>
-              <ion-input formControlName="mobileNumber" type="number"></ion-input>
+              <ion-input formControlName="mobileNumber"></ion-input>
             </ion-item>
           </ion-col>
         </ion-row>
@@ -85,7 +85,15 @@
           <ion-col>
             <ion-item>
               <ion-label position="floating">Contact Number</ion-label>
-              <ion-input formControlName="contactPersonNumber" type="number"></ion-input>
+              <ion-input formControlName="contactPersonNumber"></ion-input>
+            </ion-item>
+          </ion-col>
+        </ion-row>
+        <ion-row>
+          <ion-col>
+            <ion-item>
+              <ion-label position="floating">Relationship</ion-label>
+              <ion-input formControlName="contactPersonRelationship"></ion-input>
             </ion-item>
           </ion-col>
         </ion-row>
