--- a/web/src/app/student/student-rotations/view-student-assignment/view-student-assignment.page.html
+++ b/web/src/app/student/student-rotations/view-student-assignment/view-student-assignment.page.html
@@ -13,7 +13,7 @@
     <ion-row>
       <ion-col size="4">
         <ion-label>
-          <b>Field Name</b>
+          <b>Course</b>
         </ion-label>
       </ion-col>
       <ion-col size="8">
@@ -71,7 +71,7 @@
     <ion-row>
       <ion-col size="4">
         <ion-label>
-          <b>Remarks</b>
+          <b>Admin Remarks</b>
         </ion-label>
       </ion-col>
       <ion-col size="8">
@@ -81,7 +81,7 @@
     <ion-row>
       <ion-col size="4">
         <ion-label>
-          <b>Reference Message</b>
+          <b>Student Message</b>
         </ion-label>
       </ion-col>
       <ion-col size="8">
