--- a/web/src/app/update-password-modal/update-password-modal.page.html
+++ b/web/src/app/update-password-modal/update-password-modal.page.html
@@ -15,6 +15,14 @@
         <ion-row>
           <ion-col>
             <ion-item>
+              <ion-label position="floating">Old Password</ion-label>
+              <ion-input [(ngModel)]="oldPassword" formControlName="oldPassword" type="password"></ion-input>
+            </ion-item>
+          </ion-col>
+        </ion-row>
+        <ion-row>
+          <ion-col>
+            <ion-item>
               <ion-label position="floating">New Password</ion-label>
               <ion-input [(ngModel)]="newPassword" formControlName="password" type="password"></ion-input>
             </ion-item>
