--- a/web/src/app/admin/admin.page.html
+++ b/web/src/app/admin/admin.page.html
@@ -45,14 +45,17 @@
             <ion-item a [routerLink]="['/admin/rotations']">
               <ion-label>Rotations</ion-label>
             </ion-item>
+            <ion-item a [routerLink]="['/admin/grades']">
+              <ion-label>Grades Management</ion-label>
+            </ion-item>
             <ion-item a [routerLink]="['/admin/change-elective-requests']">
               <ion-label>Change Elective Requests</ion-label>
             </ion-item>
             <ion-item a [routerLink]="['/admin/change-schedule-requests']">
               <ion-label>Change Schedule Requests</ion-label>
             </ion-item>
-            <ion-item a [routerLink]="['/admin/grades']">
-              <ion-label>Grades Management</ion-label>
+            <ion-item a [routerLink]="['/admin/reset-password-requests']">
+              <ion-label>Reset Password Requests</ion-label>
             </ion-item>
           </ion-menu-toggle>
         </ion-list>
