--- a/web/src/app/student/student-schedules-overview/student-schedules-overview.page.html
+++ b/web/src/app/student/student-schedules-overview/student-schedules-overview.page.html
@@ -50,7 +50,7 @@
               <td class="text-center grp11">11</td>
           </tr>
           <tr id="3">
-              <th scope="row">Neuro/Psych<br><small>TEST1</small></th>
+              <th scope="row">Neuro/Psych</th>
               <td class="text-center grp3">3</td>
               <td class="text-center grp4">4</td>
               <td class="text-center grp5">5</td>
@@ -65,7 +65,7 @@
               <td class="text-center grp2">2</td>
           </tr>
           <tr id="4">
-              <th scope="row">Derma<br><small>TEST1</small></th>
+              <th scope="row">Derma</th>
               <td class="text-center grp3">3</td>
               <td class="text-center grp4">4</td>
               <td class="text-center grp5">5</td>
