--- a/web/src/app/admin/admin.page.html
+++ b/web/src/app/admin/admin.page.html
@@ -11,6 +11,9 @@
       <ion-button title="Profile" (click)="viewProfile()">
         <ion-icon name="contact"></ion-icon>
       </ion-button>
+      <ion-button title="FAQ" (click)="viewFAQ()">
+        <ion-icon name="help"></ion-icon>
+      </ion-button>
       <ion-button title="Logout" (click)="logout()">
         <ion-icon name="log-out"></ion-icon>
       </ion-button>
@@ -24,9 +27,21 @@
       <ion-content>
         <ion-list lines="none">
           <ion-menu-toggle auto-hide="false">
+            <ion-item a [routerLink]="['/admin/change-schedule-requests']">
+              <ion-label>Change Schedule Requests</ion-label>
+            </ion-item>
+            <ion-item a [routerLink]="['/admin/change-elective-requests']">
+              <ion-label>Change Elective Requests</ion-label>
+            </ion-item>
+            <ion-item a [routerLink]="['/admin/grades']">
+              <ion-label>Grades Management</ion-label>
+            </ion-item>
             <ion-item a [routerLink]="['/admin/accounts']">
               <ion-label>Accounts</ion-label>
-            </ion-item>      
+            </ion-item>
+            <ion-item a [routerLink]="['/admin/group-assignments']">
+              <ion-label>Group Assignments</ion-label>
+            </ion-item>
             <ion-item a [routerLink]="['/admin/fields']">
               <ion-label>Courses</ion-label>
             </ion-item>
@@ -36,24 +51,12 @@
             <ion-item a [routerLink]="['/admin/schedules']">
               <ion-label>Schedules</ion-label>
             </ion-item>
-            <ion-item a [routerLink]="['/admin/schedules-overview']">
-              <ion-label>Overview of Schedules</ion-label>
-            </ion-item>
-            <ion-item a [routerLink]="['/admin/group-assignments']">
-              <ion-label>Group Assignments</ion-label>
-            </ion-item>
             <ion-item a [routerLink]="['/admin/rotations']">
               <ion-label>Rotations</ion-label>
             </ion-item>
-            <ion-item a [routerLink]="['/admin/grades']">
-              <ion-label>Grades Management</ion-label>
-            </ion-item>
-            <ion-item a [routerLink]="['/admin/change-elective-requests']">
-              <ion-label>Change Elective Requests</ion-label>
-            </ion-item>
-            <ion-item a [routerLink]="['/admin/change-schedule-requests']">
-              <ion-label>Change Schedule Requests</ion-label>
-            </ion-item>
+            <ion-item a [routerLink]="['/admin/schedules-overview']">
+              <ion-label>Overview of Schedules</ion-label>
+            </ion-item>  
             <ion-item a [routerLink]="['/admin/reset-password-requests']">
               <ion-label>Reset Password Requests</ion-label>
             </ion-item>
