--- a/web/src/app/student/student-profile/student-profile.page.html
+++ b/web/src/app/student/student-profile/student-profile.page.html
@@ -16,7 +16,7 @@
           <ion-col>
             <ion-item>
               <ion-label position="floating">Student ID</ion-label>
-              <ion-input formControlName="studentId"></ion-input>
+              <ion-input formControlName="studentId" disabled="true"></ion-input>
             </ion-item>
           </ion-col>
         </ion-row>
