--- a/web/src/app/student/student.page.html
+++ b/web/src/app/student/student.page.html
@@ -11,6 +11,9 @@
       <ion-button title="Profile" (click)="viewProfile()">
         <ion-icon name="contact"></ion-icon>
       </ion-button>
+      <ion-button title="FAQ" (click)="viewFAQ()">
+        <ion-icon name="help"></ion-icon>
+      </ion-button>
       <ion-button title="Logout" (click)="logout()">
         <ion-icon name="log-out"></ion-icon>
       </ion-button>
