Added pagination on index pages.

--- a/web/src/app/admin/reset-password-requests/reset-password-requests.page.html
+++ b/web/src/app/admin/reset-password-requests/reset-password-requests.page.html
@@ -10,7 +10,8 @@
     </ion-row>
     <ion-row  
       class="border-bottom p-t-b-10"
-      *ngFor="let request of requests" align-items-center>
+      *ngFor="let request of requests | paginate: { itemsPerPage: 20, currentPage: p }"
+      align-items-center>
       <ion-col size="4">
         {{ request.student.email }}
       </ion-col>
@@ -29,6 +30,11 @@
       <ion-col size="4" text-center *ngIf="request.isPending">
         <ion-button (click)="approve(request)">Approve</ion-button>
         <ion-button color="danger" (click)="decline(request)">Decline</ion-button>
+      </ion-col>
+    </ion-row>
+    <ion-row>
+      <ion-col text-center>
+        <pagination-controls (pageChange)="p = $event"></pagination-controls>
       </ion-col>
     </ion-row>
   </ion-grid>
