--- a/web/src/app/admin/accounts/accounts.page.html
+++ b/web/src/app/admin/accounts/accounts.page.html
@@ -21,7 +21,7 @@
         <b>Status</b>
       </ion-col>
     </ion-row>
-    <ion-row 
+    <!-- <ion-row 
       class="border-bottom log p-t-b-10" 
       align-items-center *ngFor="let user of users"
       (click)="viewUser(user)">
@@ -39,6 +39,32 @@
       </ion-col>
       <ion-col size="1" *ngIf="!user.isActive">
         Inactive
+      </ion-col>
+    </ion-row> -->
+
+    <ion-row 
+      class="border-bottom log p-t-b-10" 
+      align-items-center *ngFor="let user of users | paginate: { itemsPerPage: 20, currentPage: p }"
+      (click)="viewUser(user)">
+      <ion-col size="4">
+        {{ user.firstName + ' ' + user.middleName + ' ' + user.lastName }}
+      </ion-col>
+      <ion-col size="4">
+        {{ user.email }}
+      </ion-col>
+      <ion-col size="3">
+        {{ user.userType === UserType.FIELD_ADMIN ? 'RCA' : user.userType }}
+      </ion-col>
+      <ion-col size="1" *ngIf="user.isActive">
+        Active
+      </ion-col>
+      <ion-col size="1" *ngIf="!user.isActive">
+        Inactive
+      </ion-col>
+    </ion-row>
+    <ion-row>
+      <ion-col text-center>
+        <pagination-controls (pageChange)="p = $event"></pagination-controls>
       </ion-col>
     </ion-row>
   </ion-grid>
