--- a/web/src/app/admin/admin-grades-management/admin-grades-management.page.html
+++ b/web/src/app/admin/admin-grades-management/admin-grades-management.page.html
@@ -19,7 +19,7 @@
     </ion-row>
     <ion-row 
       class="border-bottom log p-t-b-10" 
-      align-items-center *ngFor="let assignment of assignments"
+      align-items-center *ngFor="let assignment of assignments | paginate: { itemsPerPage: 20, currentPage: p }"
       (click)="viewAssignment(assignment)">
       <ion-col size="3">
         {{ assignment.student.firstName + ' ' + assignment.student.middleName  + ' ' + assignment.student.lastName }}
@@ -41,6 +41,11 @@
       </ion-col>
       <ion-col size="2" *ngIf="!assignment.isActive">
         Inactive
+      </ion-col>
+    </ion-row>
+    <ion-row>
+      <ion-col text-center>
+        <pagination-controls (pageChange)="p = $event"></pagination-controls>
       </ion-col>
     </ion-row>
   </ion-grid>
