--- a/web/src/app/admin/field-groups/field-groups.page.html
+++ b/web/src/app/admin/field-groups/field-groups.page.html
@@ -20,7 +20,7 @@
     </ion-row>
     <ion-row 
       class="border-bottom log p-t-b-10" 
-      align-items-center *ngFor="let g of fieldGroups"
+      align-items-center *ngFor="let g of fieldGroups | paginate: { itemsPerPage: 20, currentPage: p }"
       (click)="viewFieldGroup(g)">
       <ion-col size="7">
         {{ g.name }}
@@ -33,6 +33,11 @@
       </ion-col>
       <ion-col size="2" *ngIf="!g.isActive">
         Inactive
+      </ion-col>
+    </ion-row>
+    <ion-row>
+      <ion-col text-center>
+        <pagination-controls (pageChange)="p = $event"></pagination-controls>
       </ion-col>
     </ion-row>
   </ion-grid>
