--- a/web/src/app/admin/fields/fields.page.html
+++ b/web/src/app/admin/fields/fields.page.html
@@ -26,7 +26,7 @@
     </ion-row>
     <ion-row 
       class="border-bottom log p-t-b-10" 
-      align-items-center *ngFor="let field of fields"
+      align-items-center *ngFor="let field of fields | paginate: { itemsPerPage: 20, currentPage: p }"
       (click)="viewField(field)">
       <ion-col size="3">
         {{ field.name }}
@@ -45,6 +45,11 @@
       </ion-col>
       <ion-col size="2" *ngIf="!field.isActive">
         Inactive
+      </ion-col>
+    </ion-row>
+    <ion-row>
+      <ion-col text-center>
+        <pagination-controls (pageChange)="p = $event"></pagination-controls>
       </ion-col>
     </ion-row>
   </ion-grid>
