--- a/web/src/app/admin/rotations/rotations.page.html
+++ b/web/src/app/admin/rotations/rotations.page.html
@@ -29,7 +29,7 @@
     </ion-row>
     <ion-row 
       class="border-bottom log p-t-b-10" 
-      align-items-center *ngFor="let rotation of rotations"
+      align-items-center *ngFor="let rotation of rotations | paginate: { itemsPerPage: 20, currentPage: p }"
       (click)="viewRotation(rotation)">
       <ion-col size="2">
         {{ getFieldName(rotation) }}
@@ -51,6 +51,11 @@
       </ion-col>
       <ion-col size="1">
         {{ rotation.studentCount }}
+      </ion-col>
+    </ion-row>
+    <ion-row>
+      <ion-col text-center>
+        <pagination-controls (pageChange)="p = $event"></pagination-controls>
       </ion-col>
     </ion-row>
   </ion-grid>
