--- a/web/src/app/admin/schedules/schedules.page.html
+++ b/web/src/app/admin/schedules/schedules.page.html
@@ -20,7 +20,7 @@
     </ion-row>
     <ion-row 
       class="border-bottom log p-t-b-10" 
-      align-items-center *ngFor="let sched of schedules"
+      align-items-center *ngFor="let sched of schedules | paginate: { itemsPerPage: 20, currentPage: p }"
       (click)="viewSchedule(sched)">
       <ion-col size="5">
         {{ sched.startDate | date: 'MMM dd, yyyy' }}
@@ -33,6 +33,11 @@
       </ion-col>
       <ion-col size="2" *ngIf="!sched.isActive">
         Inactive
+      </ion-col>
+    </ion-row>
+    <ion-row>
+      <ion-col text-center>
+        <pagination-controls (pageChange)="p = $event"></pagination-controls>
       </ion-col>
     </ion-row>
   </ion-grid>
