--- a/web/src/app/admin/student-change-schedule-requests/student-change-schedule-requests.page.html
+++ b/web/src/app/admin/student-change-schedule-requests/student-change-schedule-requests.page.html
@@ -19,7 +19,7 @@
     </ion-row>
     <ion-row 
       class="border-bottom log p-t-b-10" 
-      align-items-center *ngFor="let request of requests"
+      align-items-center *ngFor="let request of requests | paginate: { itemsPerPage: 20, currentPage: p }"
       (click)="updateRequest(request)">
       <ion-col size="3">
         {{ request.student.firstName + ' ' + request.student.middleName + ' ' + request.student.lastName }}
@@ -41,6 +41,11 @@
       </ion-col>
       <ion-col size="2" *ngIf="request.isPending">
         Pending
+      </ion-col>
+    </ion-row>
+    <ion-row>
+      <ion-col text-center>
+        <pagination-controls (pageChange)="p = $event"></pagination-controls>
       </ion-col>
     </ion-row>
   </ion-grid>
