--- a/web/src/app/student/student-rotations/student-rotations.page.html
+++ b/web/src/app/student/student-rotations/student-rotations.page.html
@@ -22,7 +22,7 @@
     </ion-row>
     <ion-row 
       class="border-bottom log p-t-b-10" 
-      align-items-center *ngFor="let assignment of assignments"
+      align-items-center *ngFor="let assignment of assignments | paginate: { itemsPerPage: 20, currentPage: p }"
       (click)="viewAssignment(assignment)">
       <ion-col size="2">
         {{ assignment.field.name }}
@@ -47,6 +47,11 @@
       </ion-col>
       <ion-col size="2" *ngIf="!assignment.isActive">
         Inactive
+      </ion-col>
+    </ion-row>
+    <ion-row>
+      <ion-col text-center>
+        <pagination-controls (pageChange)="p = $event"></pagination-controls>
       </ion-col>
     </ion-row>
   </ion-grid>
