--- a/web/src/app/admin/accounts/accounts-view/accounts-view.page.html
+++ b/web/src/app/admin/accounts/accounts-view/accounts-view.page.html
@@ -87,7 +87,7 @@
     <ion-row *ngIf="user.userType === UserType.STUDENT">
       <ion-col size="4">
         <ion-label>
-          <b>Group</b>
+          <b>Group #</b>
         </ion-label>
       </ion-col>
       <ion-col size="8">
@@ -164,7 +164,7 @@
         <b>End Date</b>
       </ion-col>
       <ion-col size="2">
-        <b>Group</b>
+        <b>Group #</b>
       </ion-col>
       <ion-col size="2">
         <b>Grade</b>
