--- a/web/src/app/field-admin/grades-management/grades-management.page.html
+++ b/web/src/app/field-admin/grades-management/grades-management.page.html
@@ -11,7 +11,7 @@
         <b>Student ID</b>
       </ion-col>
       <ion-col size="1">
-        <b>Group</b>
+        <b>Group #</b>
       </ion-col>
       <ion-col size="3">
         <b>Schedule</b>
