--- a/web/src/app/admin/admin-grades-management/admin-view-assignment/admin-view-assignment.page.html
+++ b/web/src/app/admin/admin-grades-management/admin-view-assignment/admin-view-assignment.page.html
@@ -53,7 +53,7 @@
     <ion-row>
       <ion-col size="4">
         <ion-label>
-          <b>Group</b>
+          <b>Group #</b>
         </ion-label>
       </ion-col>
       <ion-col size="8">
