--- a/web/src/app/admin/group-assignments/group-assignments.page.html
+++ b/web/src/app/admin/group-assignments/group-assignments.page.html
@@ -20,7 +20,7 @@
         <ion-grid class="count-container">
           <ion-row class="border-bottom">
             <ion-col size="7">
-              <b>Group</b>
+              <b>Group #</b>
             </ion-col>
             <ion-col size="5">
               <b>Students</b>
@@ -58,7 +58,7 @@
               <b>Name</b>
             </ion-col>
             <ion-col size="3">
-              <b>Group</b>
+              <b>Group #</b>
             </ion-col>
           </ion-row>
           <ng-container *ngIf="currentGroup === 'Unassigned'">
