--- a/web/src/app/admin/rotations/rotations-create/rotations-create.page.html
+++ b/web/src/app/admin/rotations/rotations-create/rotations-create.page.html
@@ -92,7 +92,7 @@
         <ion-row>
           <ion-col>
             <ion-item>
-              <ion-label position="floating">Group</ion-label>
+              <ion-label position="floating">Group #</ion-label>
               <ion-select 
                 interface="action-sheet" 
                 placeholder="Select Group"
