--- a/web/src/app/admin/rotations/rotations.page.html
+++ b/web/src/app/admin/rotations/rotations.page.html
@@ -18,13 +18,13 @@
         <b>RCA</b>
       </ion-col>
       <ion-col size="2">
-        <b>Group</b>
+        <b>Group #</b>
       </ion-col>
       <ion-col size="2">
         <b>Status</b>
       </ion-col>
       <ion-col size="1">
-        <b>Count</b>
+        <b>Student Count</b>
       </ion-col>
     </ion-row>
     <ion-row 
