--- a/web/src/app/admin/student-change-elective-request/student-change-elective-request.page.html
+++ b/web/src/app/admin/student-change-elective-request/student-change-elective-request.page.html
@@ -11,7 +11,7 @@
         <b>Student ID</b>
       </ion-col>
       <ion-col size="2">
-        <b>Group</b>
+        <b>Group #</b>
       </ion-col>
       <ion-col size="2">
         <b>Status</b>
