--- a/web/src/app/admin/student-change-schedule-requests/student-change-schedule-request-update/student-change-schedule-request-update.page.html
+++ b/web/src/app/admin/student-change-schedule-requests/student-change-schedule-request-update/student-change-schedule-request-update.page.html
@@ -14,17 +14,14 @@
       <ion-col size="3">
         <b>Course</b>
       </ion-col>
-      <ion-col size="3">
-        <b>Start Date</b>
-      </ion-col>
-      <ion-col size="3">
-        <b>End Date</b>
+      <ion-col size="5">
+        <b>Schedule</b>
       </ion-col>
       <ion-col size="2">
-        <b>Group</b>
+        <b>Group #</b>
       </ion-col>
-      <ion-col size="1">
-        <b>Count</b>
+      <ion-col size="2">
+        <b>Student Count</b>
       </ion-col>
     </ion-row>
     <ion-row class="border-bottom p-t-b-10">
@@ -36,16 +33,13 @@
       <ion-col size="3">
         {{ assignment.field.name }}
       </ion-col>
-      <ion-col size="3">
-        {{ assignment.rotation.schedule.startDate | date: 'MMM dd, yyyy' }}
-      </ion-col>
-      <ion-col size="3">
-        {{ assignment.rotation.schedule.endDate | date: 'MMM dd, yyyy' }}
+      <ion-col size="5">
+        {{ assignment.rotation.schedule.startDate | date: 'MMM dd, yyyy' }} - {{ assignment.rotation.schedule.endDate | date: 'MMM dd, yyyy' }}
       </ion-col>
       <ion-col size="2">
         {{ assignment.group.name }}
       </ion-col>
-      <ion-col size="1">
+      <ion-col size="2">
         {{ assignment.rotation.studentCount }}
       </ion-col>
     </ion-row>
@@ -58,16 +52,13 @@
       <ion-col size="3">
         {{ assignment.field.name }}
       </ion-col>
-      <ion-col size="3">
-        {{ assignment.rotation.schedule.startDate | date: 'MMM dd, yyyy' }}
-      </ion-col>
-      <ion-col size="3">
-        {{ assignment.rotation.schedule.endDate | date: 'MMM dd, yyyy' }}
+      <ion-col size="5">
+        {{ assignment.rotation.schedule.startDate | date: 'MMM dd, yyyy' }} - {{ assignment.rotation.schedule.endDate | date: 'MMM dd, yyyy' }}
       </ion-col>
       <ion-col size="2">
         {{ assignment.group.name }}
       </ion-col>
-      <ion-col size="1">
+      <ion-col size="2">
         {{ assignment.rotation.studentCount }}
       </ion-col>
     </ion-row>
