--- a/web/src/app/field-admin/grades-management/view-assignment/view-assignment.page.html
+++ b/web/src/app/field-admin/grades-management/view-assignment/view-assignment.page.html
@@ -43,7 +43,7 @@
     <ion-row>
       <ion-col size="4">
         <ion-label>
-          <b>Group</b>
+          <b>Group #</b>
         </ion-label>
       </ion-col>
       <ion-col size="8">
