--- a/web/src/app/student/change-schedule-requests/change-schedule-requests-view/change-schedule-requests-view.page.html
+++ b/web/src/app/student/change-schedule-requests/change-schedule-requests-view/change-schedule-requests-view.page.html
@@ -21,7 +21,7 @@
         <b>End Date</b>
       </ion-col>
       <ion-col size="3">
-        <b>Group</b>
+        <b>Group #</b>
       </ion-col>
     </ion-row>
     <ion-row class="border-bottom p-t-b-10">
