--- a/web/src/app/student/student-profile/student-profile.page.html
+++ b/web/src/app/student/student-profile/student-profile.page.html
@@ -62,7 +62,7 @@
         </ion-row>
         <ion-row class="m-t-20">
           <ion-col size="2">
-            <b>Group: </b>
+            <b>Group #: </b>
           </ion-col>
           <ion-col size="10">
             {{ currentUser?.group ? currentUser?.group?.name : ' -- ' }}
