--- a/web/src/app/student/student-rotations/student-rotations.page.html
+++ b/web/src/app/student/student-rotations/student-rotations.page.html
@@ -11,7 +11,7 @@
         <b>End Date</b>
       </ion-col>
       <ion-col size="2">
-        <b>Group</b>
+        <b>Group #</b>
       </ion-col>
       <ion-col size="2">
         <b>Grade</b>
