--- a/web/src/app/student/student.page.html
+++ b/web/src/app/student/student.page.html
@@ -28,7 +28,7 @@
         <ion-list lines="none">
           <ion-menu-toggle auto-hide="false">
             <ion-item a [routerLink]="['/student/rotations']">
-              <ion-label>Rotations</ion-label>
+              <ion-label>Rotation Assignments</ion-label>
             </ion-item>
             <ion-item a [routerLink]="['/student/change-elective-requests']">
               <ion-label>Change Elective Requests</ion-label>
