--- a/web/src/app/admin/reset-password-requests/reset-password-requests.page.html
+++ b/web/src/app/admin/reset-password-requests/reset-password-requests.page.html
@@ -5,7 +5,7 @@
         <b>Email</b>
       </ion-col>
       <ion-col size="4">
-        <b>Status</b>
+        <b>Date Requested</b>
       </ion-col>
     </ion-row>
     <ion-row  
@@ -13,23 +13,16 @@
       *ngFor="let request of requests | paginate: { itemsPerPage: 20, currentPage: p }"
       align-items-center>
       <ion-col size="4">
-        {{ request.student.email }}
+        {{ request.email }}
       </ion-col>
-      <ion-col size="4" *ngIf="!request.isPending && request.isApproved">
-        Approved
+      <ion-col size="4">
+        {{ request.dateCreated | date: 'MMM dd, yyyy' }}
       </ion-col>
-      <ion-col size="4" *ngIf="!request.isPending && !request.isApproved">
-        Declined
-      </ion-col>
-      <ion-col size="4" *ngIf="request.isPending">
-        Pending
-      </ion-col>
-      <ion-col size="4" text-center *ngIf="!request.isPending">
-        --
-      </ion-col>
-      <ion-col size="4" text-center *ngIf="request.isPending">
+      <ion-col size="4" text-center *ngIf="!request.isApproved">
         <ion-button (click)="approve(request)">Approve</ion-button>
-        <ion-button color="danger" (click)="decline(request)">Decline</ion-button>
+      </ion-col>
+      <ion-col size="4" text-center *ngIf="request.isApproved">
+        --
       </ion-col>
     </ion-row>
     <ion-row>
@@ -39,4 +32,3 @@
     </ion-row>
   </ion-grid>
 </ion-content>
-  
