Added usertype in headers.

--- a/web/src/app/admin/admin.page.html
+++ b/web/src/app/admin/admin.page.html
@@ -6,7 +6,7 @@
     <ion-title>UST Med Clerkship Tracker</ion-title>
     <ion-buttons slot="end">
       <ion-label class="p-l-r-5 profile-text">
-        {{ currentUser.firstName + ' ' + currentUser.middleName + ' ' + currentUser.lastName }}
+        UMA | {{ currentUser.firstName + ' ' + currentUser.middleName + ' ' + currentUser.lastName }}
       </ion-label>
       <ion-button title="Profile" (click)="viewProfile()">
         <ion-icon name="contact"></ion-icon>
